objects/Function__c.object
<CustomObject>
    <description>Joins the Account Site and the Account object in a many-to-many relationship</description>
    <label>Function</label>
    <nameField>
        <displayFormat>FID-{000000000}</displayFormat>
        <label>Function Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Functions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Key__c</fullName>
        <description>Concatenates &quot;PKI_SAP_Sold_To_Account_Number__c&quot; with &quot;PKI_SAP_Partner_Site__c&quot; with &quot;PKI_SAP_Partner_Type__c&quot;</description>
        <externalId>true</externalId>
        <inlineHelpText>Concatenates &quot;PKI_SAP_Sold_To_Account_Number__c&quot; with &quot;PKI_SAP_Partner_Site__c&quot; with &quot;PKI_SAP_Partner_Type__c&quot;</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Partner_Site__c</fullName>
        <label>Partner Site</label>
        <referenceTo>Partner_Site__c</referenceTo>
        <relationshipLabel>Sold To Accounts</relationshipLabel>
        <relationshipName>Sold_To_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sold_To_Account__c</fullName>
        <label>Sold-To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Sites</relationshipLabel>
        <relationshipName>Partner_Sites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Partner_Type__c</fullName>
        <inlineHelpText>EN/Country of Ultimate Destination
RE/Bill-to
RG/Payer
WE/Ship-to
YA/Bill-to Local Language
YB/Ship-to Local Language
ZD/Payer (EEU2)
ZF/Replacement Shipping Address</inlineHelpText>
        <label>PKI SAP Partner Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Partner_Type_Name__c</fullName>
        <description>Long version of the PKI_SAP_Partner_Type__c field</description>
        <label>PKI SAP Partner Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Lookups_Last_Modified__c</fullName>
        <description>Used in the UpdateFunctionsAutomated.apxc to determine whether or not to include this record again.</description>
        <inlineHelpText>Used in the UpdateFunctionsAutomated.apxc to determine whether or not to include this record again.</inlineHelpText>
        <label>Date Lookups Last Modified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Partner_Site_Number__c</fullName>
        <description>Represents the Payer, Bill-To, or Ship-To Customer Number</description>
        <label>PKI SAP Partner Site Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Sold_To_Account_Number__c</fullName>
        <description>Represents the Sold-To Customer Number</description>
        <label>PKI SAP Sold To Account Number</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>